--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" media="only screen and (max-width: 390px)" href="css/adapt_style.css">
     <title>Runners</title>
 </head>
 <body>
@@ -28,11 +29,12 @@
         <div class="face_site">
             <div class="face_left">
                 <p class="first_line">Grab Your Fav Shoes</p>
+                <p class="unvisible_text">Best Shoe's Collections</p>
                 <p class="second_line left">Best Shoe's</p>
-                <img src="img/2runners.png" alt="sneakers">
+                <img class="img_runners" src="img/2runners.png" alt="sneakers">
             </div>
             <div class="face_right">
-                <img src="img/1runners.png" alt="sneakers">
+                <img class="img_runners" src="img/1runners.png" alt="sneakers">
                 <p class="second_line right">Collections</p>
                 <button class="face_buy_button"><p>BUY NOW</p></button>
             </div>
